--- a/package.json
+++ b/package.json
@@ -3,19 +3,42 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@testing-library/jest-dom": "^5.17.0",
-    "@testing-library/react": "^13.4.0",
-    "@testing-library/user-event": "^13.5.0",
+    "@testing-library/jest-dom": "^6.1.3",
+    "@testing-library/react": "^14.0.0",
+    "@testing-library/user-event": "^14.5.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^3.4.0",
+    "@babel/compat-data": "^7.22.20",
+    "@babel/core": "^7.22.20",
+    "@babel/plugin-proposal-class-properties": "^7.18.6",
+    "@babel/preset-env": "^7.22.20",
+    "@babel/preset-react": "^7.22.15",
+    "babel-loader": "^9.1.3",
+    "css-loader": "^6.8.1",
+    "enzyme": "^3.11.0",
+    "enzyme-adapter-react-16": "^1.15.7",
+    "file-loader": "^6.2.0",
+    "html-loader": "^4.2.0",
+    "html-webpack-plugin": "^5.5.3",
+    "jest": "^29.7.0",
+    "jest-enzyme": "^7.1.2",
+    "jest-expect-message": "^1.1.3",
+    "style-loader": "^3.3.3",
+    "webpack": "^5.88.2",
+    "webpack-cli": "^5.1.4",
+    "webpack-dev-server": "^4.15.1"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "start": "webpack-dev-server --open --mode development --env appFoobar --env titleQwerty",
+    "start-refactor": "webpack-dev-server --open --mode development --env.entryDir=refactor",
+    "build": "webpack --mode development --config webpack.config.js",
+    "test": "jest",
+    "test:module-2": "jest test/module-2/",
+    "test:module-3": "jest test/module-3/",
+    "test:module-4": "jest test/module-4/",
+    "test:module-5": "jest test/module-5/"
   },
   "eslintConfig": {
     "extends": [
@@ -33,6 +56,18 @@
       "last 1 chrome version",
       "last 1 firefox version",
       "last 1 safari version"
+    ]
+  },
+  "jest": {
+    "moduleNameMapper": {
+      "\\.css$": "<rootDir>/__mocks__/styleMock.js"
+    },
+    "setupFilesAfterEnv": [
+      "<rootDir>/test/setupTests.js",
+      "jest-expect-message"
+    ],
+    "testPathIgnorePatterns": [
+      "<rootDir>/node_modules/"
     ]
   }
 }
